# ccProject

./: .gitignore  CMakeLists.txt  Makefile  README.md  Vagrantfile  setup.sh
doc/: Makefile  helloworld.md
src/: CMakeLists.txt  application.cc  application.h  helloworld.cc  helloworld.h  main.cc  test_application.cc  test_helloworld.cc
